--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ archivesBaseName = 'enchantment_lore_forge'
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'official', version: '1.18.1'
+    mappings channel: 'official', version: '1.19.2'
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -51,6 +51,9 @@ minecraft {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.5'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.1.15'
 }
 
+jar {
+    archiveName = "${archivesBaseName}-1.19-${version}.${extension}"
+}
